@@ -7,6 +7,8 @@
         if successful
         Don't write out a new version of a node if the checksum is the
         same as the one already stored (#43)
+        t/400_upgrade.t: skip all tests correctly if no backends
+        configured (#44)
 
 0.76    13 July 2008
         Really add missing prereq of DBI!
